--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -466,5 +466,6 @@ and always knows where you are to not miss where to get off the bus.
 	<string name="ukrainian">Ukrainian</string>
 	<string name="danish">Danish</string>
 	<string name="time_to_change">Time to change: %1$s</string>
+	<string name="gps_button">GPS button</string>
 
 </resources>
